updated readme, updated demo with ccss browser prefixes

--- a/demo/index.html
+++ b/demo/index.html
@@ -62,8 +62,12 @@
   <div class="section section4 bg-dark"></div>
   
   
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- // development //
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
   <script src="../src/switchstyler.js"></script>
+  -->
+  <script src="../dist/jquery.switchstyler.min.js"></script>
   
   <script>
     
