--- a/test/switchstyler.html
+++ b/test/switchstyler.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css" media="screen">
   <script src="../bower_components/qunit/qunit/qunit.js"></script>
   <!-- Load local lib and tests. -->
-  <script src="../src/switchstyler.js"></script>
+  <script src="../dist/jquery.switchstyler.min.js"></script>
   <script src="switchstyler_test.js"></script>
   <!-- Removing access to jQuery and $. But it'll still be available as _$, if
        you REALLY want to mess around with jQuery in the console. REMEMBER WE
